--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
             <div id="offersBar">
                 <h3>أكثر العروض طلباً:</h3>
-                <div id="offersList"></div>
+                <div id="mostUsedOffersList"></div>
             </div>
 
 
@@ -173,6 +173,7 @@
                         <option value="عائلة">عائلة</option>
                         <option value="شباب">شباب</option>
                         <option value="بنات">بنات</option>
+                        <option value="شخصين">شخصين</option>
                         <option value="اخرى">اخرى</option>
                     </select>
                 </div>
