--- a/manage-travel-offers.html
+++ b/manage-travel-offers.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -72,10 +73,17 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn primary" id="addNewMostUsedOffers">إضافة عرض جديد</button>
-                <button type="button" class="btn primary" id="saveMostUsedOffers" style="background: rgb(0, 172, 0);">حفظ التغييرات</button>
+                <button type="button" class="btn primary" id="saveMostUsedOffers"
+                    style="background: rgb(0, 172, 0);">حفظ التغييرات</button>
             </div>
         </div>
     </div>
+
+
+
+
+
+
 
     <div id="editModal" class="modal">
         <div class="modal-content">
