--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
 
 
                 <!-- عدد البالغين والأطفال -->
-                <div style="margin-bottom: 20px;">
+                <div>
+                    <p>العدد:</p>
                     <input type="number" id="adults" min="1" placeholder="عدد البالغين" required>
                     <input type="number" id="children" min="0" placeholder="عدد الأطفال">
                 </div>
