--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="sample-travel.css" />
     <link rel="stylesheet" href="sample-travel-create-offer.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 
 
@@ -25,74 +26,6 @@
 
 <body id="mughader_body">
 
-    <header id="mughader_header">
-        <div class="mughader_header_container">
-            <img src="مكتب-سياحي/مكتب-سياحي-بحريني.webp" alt="مكتب سياحي - مغادر" class="mughader_header_logo">
-            <nav class="mughader_desktop_nav">
-                <ul class="mughader_nav_links">
-                    <li><a onclick="window.scrollTo({ top: 0, behavior: 'smooth' }); closeSidebar()">الصفحة الرئيسية</a>
-                    <li><a onclick="scrollToWhoAreWe('about_us_section_id')">من نحن؟</a></li>
-                    <li>
-                        <a target="_blank" class="mughader_social_icon">
-                            <ion-icon name="logo-instagram"></ion-icon>
-                        </a>
-                    </li>
-                    <li>
-                        <a target="_blank" class="mughader_social_icon">
-                            <ion-icon name="logo-twitter"></ion-icon>
-                        </a>
-                    </li>
-                    <li>
-                        <a target="_blank" class="mughader_social_icon">
-                            <ion-icon name="logo-tiktok"></ion-icon>
-                        </a>
-                    </li>
-                    <li>
-                        <a onclick="openWhatsAppNumber()" class="mughader_social_icon">
-                            <ion-icon name="logo-whatsapp"></ion-icon>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="mughader_mobile_menu_icon" onclick="toggleSidebar()">
-                <span>&#9776;</span>
-            </div>
-        </div>
-        <div class="mughader_mobile_sidebar" id="mughader_mobile_sidebar">
-            <span class="mughader_close_icon" onclick="closeSidebar()">&times;</span>
-            <ul>
-                <li><a onclick="window.scrollTo({ top: 0, behavior: 'smooth' }); closeSidebar()">الصفحة الرئيسية</a>
-                <li><a onclick="scrollToWhoAreWe('about_us_section_id'); closeSidebar()">من
-                        نحن؟</a></li>
-
-                <div class="mughader_mobile_social_icons_div">
-
-                    <li>
-                        <a target="_blank" class="mughader_social_icon">
-                            <ion-icon name="logo-instagram"></ion-icon>
-                        </a>
-                    </li>
-                    <li>
-                        <a target="_blank" class="mughader_social_icon">
-                            <ion-icon name="logo-twitter"></ion-icon>
-                        </a>
-                    </li>
-                    <li>
-                        <a target="_blank" class="mughader_social_icon">
-                            <ion-icon name="logo-tiktok"></ion-icon>
-                        </a>
-                    </li>
-                    <li>
-                        <a onclick="openWhatsAppNumber()" class="mughader_social_icon">
-                            <ion-icon name="logo-whatsapp"></ion-icon>
-                        </a>
-                    </li>
-                </div>
-
-            </ul>
-        </div>
-        <div class="mughader_sidebar_overlay" id="mughader_sidebar_overlay" onclick="closeSidebar()"></div>
-    </header>
 
 
 
@@ -279,40 +212,6 @@
 
 
 
-    <!-- Fourth Section Code -->
-    <section id="about_us_section_id" class="mughader_last_section">
-
-
-        <h1 title="مكتب سياحي - مغادر" style="font-weight: bolder; font-size: 2vmax; margin-top: 15px;">من نحن؟</h1>
-        <p>اسم الشركة للسفر والسياحة</p>
-        <p>شركة سياحية مقرها (؟)</p>
-        <p>اسم الشركة تأخذك إلى حيث ما تريد عبر عروضها وبرامجها السياحيه لتسافر حول
-            العالم وتستمتع برحلاتك. ننسق لك رحلتك من جميع الجوانب، حجز التذاكر واختيار أفضل الفنادق والجولات السياحيه
-            بأسعار تتناسب مع ميزانيتك. كما توفر اسم الشركة خدمات مميزه و برامج للشركات وقطاع الأعمال بتكاليف مثالية من
-            خلال خبراءنا في المؤسسة.</p>
-
-
-
-
-        <div class="enter_your_email_for_our_news_div">
-            <p class="cta_text">اشترك معنا للحصول على أحدث العروض والبرامج
-                السياحية</p>
-            <div class="email_subscription_form">
-                <input type="email" placeholder="أدخل بريدك الإلكتروني" aria-label="أدخل بريدك الإلكتروني" required>
-                <button type="submit">اشترك الآن</button>
-            </div>
-        </div>
-
-
-    </section>
-
-
-
-
-
-
-
-
 
     <!-- Custormers Comments -->
     <section class="mughader_customers_comments_section">
@@ -379,13 +278,83 @@
 
 
 
-    <!-- Footer Code -->
-    <footer id="footer">
 
-        <img src="مكتب-سياحي/مكتب-سياحي-بحريني.webp" alt="مكتب سياحي - مغادر">
-        <p style="direction: rtl;">اسم الشركة للسفر والسياحة | Company Name Travel<br>جميع حقوق الطبع والنشر محفوظة
-            2025 ©</p>
 
+
+
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-section about">
+                    <h3 class="footer-title">من نحن</h3>
+                    <p class="footer-text">شركة سياحية تأخذك إلى حيث ما تريد عبر عروضها وبرامجها السياحيه لتسافر حول
+                        العالم وتستمتع برحلاتك. ننسق لك رحلتك من جميع الجوانب، حجز التذاكر واختيار أفضل الفنادق والجولات
+                        السياحيه
+                        بأسعار تتناسب مع ميزانيتك. كما توفر اسم الشركة خدمات مميزه و برامج للشركات وقطاع الأعمال بتكاليف
+                        مثالية من
+                        خلال خبراءنا في المؤسسة.</p>
+                    <div class="social-icons">
+                        <a target="_blank" class="mughader_social_icon" aria-label="إنستغرام">
+                            <ion-icon name="logo-instagram"></ion-icon>
+                        </a>
+                        <a target="_blank" class="mughader_social_icon" aria-label="تويتر">
+                            <ion-icon name="logo-twitter"></ion-icon>
+                        </a>
+                        <a target="_blank" class="mughader_social_icon" aria-label="تيك توك">
+                            <ion-icon name="logo-tiktok"></ion-icon>
+                        </a>
+                        <a onclick="openWhatsAppNumber()" class="mughader_social_icon" aria-label="واتساب">
+                            <ion-icon name="logo-whatsapp"></ion-icon>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="footer-section links">
+                    <h3 class="footer-title">روابط سريعة</h3>
+                    <ul class="footer-links">
+                        <li><a href="#">الرئيسية</a></li>
+                        <li><a href="#">المنتجات</a></li>
+                        <li><a href="#">المجموعات</a></li>
+                        <li><a href="#">عن الشركة</a></li>
+                        <li><a href="#">اتصل بنا</a></li>
+                        <li><a href="#">الأسئلة الشائعة</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-section newsletter">
+                    <h3 class="footer-title">النشرة البريدية</h3>
+                    <p class="footer-text">اشترك للحصول على العروض الحصرية ونصائح عن العطور.</p>
+                    <form class="email_subscription_form">
+                        <input type="email" placeholder="أدخل بريدك الإلكتروني" aria-label="أدخل بريدك الإلكتروني"
+                            required>
+                        <button type="submit">اشتراك</button>
+                    </form>
+                </div>
+
+                <div class="footer-section contact">
+                    <h3 class="footer-title">اتصل بنا</h3>
+                    <div class="contact-info">
+                        <p><ion-icon name="call-outline"></ion-icon> +966 569446280</p>
+                        <p><ion-icon name="mail-outline"></ion-icon> travel.company@gmail.com</p>
+                        <p><ion-icon name="location-outline"></ion-icon> :عنوان الفرع الرئيسي<br>(...)</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <div class="payment-methods">
+                    <i class="fab fa-cc-visa" aria-hidden="true"></i>
+                    <i class="fab fa-cc-mastercard" aria-hidden="true"></i>
+                    <i class="fab fa-cc-amex" aria-hidden="true"></i>
+                    <i class="fab fa-cc-paypal" aria-hidden="true"></i>
+                    <i class="fab fa-cc-apple-pay" aria-hidden="true"></i>
+                </div>
+                <p>© <span class="current-year">2023</span> اسم الشركة للسفر والسياحة. جميع الحقوق محفوظة. | <a
+                        href="#">سياسة الخصوصية</a> | <a href="#">شروط
+                        الخدمة</a></p>
+            </div>
+        </div>
     </footer>
 
 
