--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
     <link rel="stylesheet" href="sample-travel.css" />
     <link rel="stylesheet" href="sample-travel-create-offer.css" />
-    <link rel="stylesheet" href="css/offer-cards.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
@@ -315,17 +314,14 @@
                     <h3 class="footer-title">روابط سريعة</h3>
                     <ul class="footer-links">
                         <li><a href="#">الرئيسية</a></li>
-                        <li><a href="#">المنتجات</a></li>
-                        <li><a href="#">المجموعات</a></li>
-                        <li><a href="#">عن الشركة</a></li>
-                        <li><a href="#">اتصل بنا</a></li>
-                        <li><a href="#">الأسئلة الشائعة</a></li>
+                        <li><a onclick="scrollToMiddleOfElement('scrollable_section_title')">بكجات سياحية</a></li>
+                        <li><a onclick="openWhatsAppNumber()">اتصل بنا</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-section newsletter">
                     <h3 class="footer-title">النشرة البريدية</h3>
-                    <p class="footer-text">اشترك للحصول على العروض الحصرية ونصائح عن العطور.</p>
+                    <p class="footer-text">اشترك للحصول عل اجدد العروض والبكجات السياحية ونصائح عن السفر.</p>
                     <form class="email_subscription_form">
                         <input type="email" placeholder="أدخل بريدك الإلكتروني" aria-label="أدخل بريدك الإلكتروني"
                             required>
@@ -351,7 +347,7 @@
                     <i class="fab fa-cc-paypal" aria-hidden="true"></i>
                     <i class="fab fa-cc-apple-pay" aria-hidden="true"></i>
                 </div>
-                <p>© <span class="current-year">2023</span> اسم الشركة للسفر والسياحة. جميع الحقوق محفوظة. | <a
+                <p>© <span class="current-year">2025</span> اسم الشركة للسفر والسياحة. جميع الحقوق محفوظة. | <a
                         href="#">سياسة الخصوصية</a> | <a href="#">شروط
                         الخدمة</a></p>
             </div>
