--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>رحلات وسياحة</title>
+    <title>ابو طارق</title>
     <link rel="stylesheet" href="create-custom-offer.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -19,7 +19,7 @@
     <header>
         <div class="logo-container">
             <img src="" alt="شعار الشركة" class="logo-img">
-            <div class="logo-text">اسم الشركة</div>
+            <div class="logo-text">ابو طارق</div>
         </div>
         <div class="header-icons">
             <i class="fas fa-heart" id="favorites-icon"><span class="favorites-count">0</span></i>
@@ -383,8 +383,8 @@
                 <h3>اتصل بنا</h3>
                 <ul>
                     <li style="direction: ltr;">+966 569446280 <i class="fas fa-phone"></i></li>
-                    <li><i class="fas fa-envelope"></i> companyName@gmail.com</li>
-                    <li><i class="fas fa-map-marker-alt"></i> موقع الشركة</li>
+                    <li><i class="fas fa-envelope"></i> abo.tariq@gmail.com</li>
+                    <li><i class="fas fa-map-marker-alt"></i> شركة اونلاين للسفر والسياحة</li>
                 </ul>
             </div>
             <div class="footer-section">
@@ -398,7 +398,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>اسم الشركة - جميع الحقوق محفوظة 2025 &copy;</p>
+            <p>ابو طارق - جميع الحقوق محفوظة 2025 &copy;</p>
         </div>
     </footer>
 
