--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div>
-                <img id="highlighted-offer-image" src="" alt="عرض مميز">
+                <img id="highlighted-offer-image" src="" alt="عرض مميز" loading="lazy" width="400" height="300">
             </div>
         </div>
     </section>
@@ -237,41 +237,41 @@
 
     <!-- Testimonials Section -->
     <section id="testimonials">
-            <div>
-                <h2 class="section-title">رأي <span style="color: var(--accent-color);">عملائنا</span></h2>
-            </div>
+        <div>
+            <h2 class="section-title">رأي <span style="color: var(--accent-color);">عملائنا</span></h2>
+        </div>
 
 
 
-            <div id="user_clint_rate_area">
-                <!-- JavaScript Dynamic Code -->
-            </div>
+        <div id="user_clint_rate_area">
+            <!-- JavaScript Dynamic Code -->
+        </div>
 
 
-            <div class="user_insert_comment_form_div">
-                <h3 class="section-title">شاركنا تجربتك</h3>
-                <form id="user_comment_form">
-                    <label for="user_comment_username">الإسم:</label>
-                    <input type="text" id="user_comment_username" required>
+        <div class="user_insert_comment_form_div">
+            <h3 class="section-title">شاركنا تجربتك</h3>
+            <form id="user_comment_form">
+                <label for="user_comment_username">الإسم:</label>
+                <input type="text" id="user_comment_username" required>
 
-                    <label for="user_comment_text">التعليق:</label>
-                    <textarea id="user_comment_text" required></textarea>
+                <label for="user_comment_text">التعليق:</label>
+                <textarea id="user_comment_text" required></textarea>
 
-                    <label for="user_comment_stars">التقييم:</label>
-                    <select id="user_comment_stars" required>
-                        <option value="5">★★★★★ (5)</option>
-                        <option value="4">★★★★☆ (4)</option>
-                        <option value="3">★★★☆☆ (3)</option>
-                        <option value="2">★★☆☆☆ (2)</option>
-                        <option value="1">★☆☆☆☆ (1)</option>
-                    </select>
+                <label for="user_comment_stars">التقييم:</label>
+                <select id="user_comment_stars" required>
+                    <option value="5">★★★★★ (5)</option>
+                    <option value="4">★★★★☆ (4)</option>
+                    <option value="3">★★★☆☆ (3)</option>
+                    <option value="2">★★☆☆☆ (2)</option>
+                    <option value="1">★☆☆☆☆ (1)</option>
+                </select>
 
-                    <button type="submit">إرسال</button>
-                </form>
-            </div>
+                <button type="submit">إرسال</button>
+            </form>
+        </div>
 
 
-            <div id="new_comment_success_notification">You Comment Has Been Added Successfully</div>
+        <div id="new_comment_success_notification">You Comment Has Been Added Successfully</div>
     </section>
 
 
@@ -290,7 +290,7 @@
             <span class="close-modal">&times;</span>
             <div class="offer-images">
                 <div class="main-image">
-                    <img id="modal-main-image" src="" alt="عرض سياحي">
+                    <img id="modal-main-image" src="" alt="عرض سياحي" loading="lazy" width="400" height="300">
                 </div>
                 <div class="thumbnail-container" id="thumbnails">
                     <!-- Thumbnails will be added here -->
@@ -358,7 +358,7 @@
     <!-- Fullscreen Image Overlay -->
     <div id="fullscreen-image-overlay"
         style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.9); z-index:9999; justify-content:center; align-items:center; transition:opacity 0.3s;">
-        <img id="fullscreen-image" src="" alt="صورة العرض"
+        <img id="fullscreen-image" src="" alt="صورة العرض" loading="lazy" width="900" height="700"
             style="max-width:90vw; max-height:90vh; border-radius:12px; box-shadow:0 4px 32px #0008; transition:transform 0.3s;">
         <button class="close-fullscreen-image" aria-label="إغلاق"
             style="position:absolute; top:30px; left:30px; background:rgba(0,0,0,0.7); color:#fff; border:none; border-radius:50%; width:44px; height:44px; font-size:2rem; cursor:pointer; z-index:10001; display:flex; align-items:center; justify-content:center;">&times;</button>
@@ -374,8 +374,12 @@
             <div class="footer-section">
                 <h3>روابط سريعة</h3>
                 <ul>
-                    <li><a onclick="document.getElementById('highlighted-offer')?.scrollIntoView({ behavior: 'smooth', block: 'center' });">الصفحة الرئيسية</a></li>
-                    <li><a onclick="document.querySelector('.offers-category-title')?.scrollIntoView({ behavior: 'smooth', block: 'center' });">العروض</a></li>
+                    <li><a
+                            onclick="document.getElementById('highlighted-offer')?.scrollIntoView({ behavior: 'smooth', block: 'center' });">الصفحة
+                            الرئيسية</a></li>
+                    <li><a
+                            onclick="document.querySelector('.offers-category-title')?.scrollIntoView({ behavior: 'smooth', block: 'center' });">العروض</a>
+                    </li>
                     <li><a href="https://wa.me/966569446280" target="_blank">اتصل بنا</a></li>
                 </ul>
             </div>
