--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
                 </div>
             </div>
             <div>
-                <img id="highlighted-offer-image" src="" alt="عرض مميز" loading="lazy" width="400" height="300">
+                <div style="position:relative; display:inline-block;">
+                    <div class="special-offer-ribbon">عرض مميز</div>
+                    <img id="highlighted-offer-image" src="" alt="عرض مميز" loading="lazy" width="400" height="300">
+                </div>
             </div>
         </div>
     </section>
