--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     <!-- Fullscreen Image Overlay -->
     <div id="fullscreen-image-overlay"
         style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.9); z-index:9999; justify-content:center; align-items:center; transition:opacity 0.3s;">
-        <img id="fullscreen-image" src="" alt="صورة العرض" loading="lazy" width="900" height="700"
+        <img id="fullscreen-image" src="" alt="صورة العرض" loading="lazy"
             style="max-width:90vw; max-height:90vh; border-radius:12px; box-shadow:0 4px 32px #0008; transition:transform 0.3s;">
         <button class="close-fullscreen-image" aria-label="إغلاق"
             style="position:absolute; top:30px; left:30px; background:rgba(0,0,0,0.7); color:#fff; border:none; border-radius:50%; width:44px; height:44px; font-size:2rem; cursor:pointer; z-index:10001; display:flex; align-items:center; justify-content:center;">&times;</button>
