--- a/index.html
+++ b/index.html
@@ -29,6 +29,44 @@
         </div>
     </header>
 
+
+
+
+
+
+
+
+
+
+
+    <!-- Website intro section -->
+    <section class="intro-section">
+        <div class="intro-images" id="introImages"></div>
+
+        <div class="intro-overlay"></div>
+
+        <div class="intro-content">
+            <h1 class="intro-headline">العالم أجمل من ماتتخيل</h1>
+            <p class="intro-subhead">إكتشف الأماكن الجديدة واصنع ذكريات لاتنسى</p>
+            <p class="intro-cta">أكثر من 200 رحلة سياحية في إنتظارك</p>
+        </div>
+
+        <!-- New Scroll Hint -->
+        <div class="scroll-hint" id="scrollHint">
+            <span class="scroll-text">خذ نظرة على عروضنا</span>
+            <div class="scroll-arrow"></div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
     <!-- Highlighted Offer Section -->
     <section class="highlighted-offer" id="highlighted-offer">
         <div class="highlighted-offer-container">
@@ -203,6 +241,65 @@
 
 
 
+
+
+
+    <!-- Our survice gaols section -->
+    <section class="our-survice-gaols-and-achievements-numbers">
+        <div class="our-survice-gaols">
+            <!-- Background Images Container -->
+            <div class="service-goals-images" id="serviceGoalsImages"></div>
+
+            <!-- Overlay with content -->
+            <div class="service-goals-overlay">
+                <div class="service-goals-content">
+                    <h2>هدفنا هو تحقيق رحلة أحلامك بطريقة ابداعية تميزنا عن غيرنا</h2>
+                </div>
+            </div>
+        </div>
+
+        <div class="our-achievements-numbers-div">
+            <div class="achievement-card fadeInUp delay-1">
+                <span class="achievement-number" data-target="+18704">0</span>
+                <p class="achievement-label">مسافرين سعداء</p>
+            </div>
+            <div class="achievement-card fadeInUp delay-2">
+                <span class="achievement-number" data-target="+21">0</span>
+                <p class="achievement-label">وكلائنا بالخارج</p>
+            </div>
+            <div class="achievement-card fadeInUp delay-3">
+                <span class="achievement-number" data-target="+74">0</span>
+                <p class="achievement-label">فريق عملنا</p>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- Benefits Section -->
     <section class="benefits">
         <h2 class="section-title">لماذا تختارنا؟</h2>
         <div class="benefits-grid">
@@ -359,12 +456,9 @@
     </div>
 
     <!-- Fullscreen Image Overlay -->
-    <div id="fullscreen-image-overlay"
-        style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.9); z-index:9999; justify-content:center; align-items:center; transition:opacity 0.3s;">
-        <img id="fullscreen-image" src="" alt="صورة العرض" loading="lazy"
-            style="max-width:90vw; max-height:90vh; border-radius:12px; box-shadow:0 4px 32px #0008; transition:transform 0.3s;">
-        <button class="close-fullscreen-image" aria-label="إغلاق"
-            style="position:absolute; top:30px; left:30px; background:rgba(0,0,0,0.7); color:#fff; border:none; border-radius:50%; width:44px; height:44px; font-size:2rem; cursor:pointer; z-index:10001; display:flex; align-items:center; justify-content:center;">&times;</button>
+    <div id="fullscreen-image-overlay">
+        <img id="fullscreen-image" src="" alt="صورة العرض" loading="lazy">
+        <button class="close-fullscreen-image" aria-label="إغلاق">&times;</button>
     </div>
 
     <!-- Add this before the closing body tag -->
@@ -390,7 +484,7 @@
                 <h3>اتصل بنا</h3>
                 <ul>
                     <li style="direction: ltr;">+966 569446280 <i class="fas fa-phone"></i></li>
-                    <li><i class="fas fa-envelope"></i> abo.tariq@gmail.com</li>
+                    <li><i class="fas fa-envelope"></i> bandar.abo.tariq300@gmail.com</li>
                     <li><i class="fas fa-map-marker-alt"></i> شركة اونلاين للسفر والسياحة</li>
                 </ul>
             </div>
