--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                 <h3>اتصل بنا</h3>
                 <ul>
                     <li style="direction: ltr;">+966 569446280 <i class="fas fa-phone"></i></li>
-                    <li><i class="fas fa-envelope"></i> bandar.abo.tariq300@gmail.com</li>
+                    <li><i class="fas fa-envelope"></i> bandar.abo.tariq@gmail.com</li>
                     <li><i class="fas fa-map-marker-alt"></i> شركة اونلاين للسفر والسياحة</li>
                 </ul>
             </div>
