--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- Highlighted Offer Section -->
     <section class="highlighted-offer" id="highlighted-offer">
         <div class="highlighted-offer-container">
-            <div class="highlighted-offer-content">
+            <div class="highlighted-offer-content scroll-slide-left">
                 <div class="highlighted-offer-badge">
                     <i class="fas fa-star"></i>
                     <span>عرض مميز</span>
@@ -90,7 +90,7 @@
                     </button>
                 </div>
             </div>
-            <div>
+            <div class="scroll-slide-right">
                 <div style="position:relative; display:inline-block;">
                     <div class="special-offer-ribbon">عرض مميز</div>
                     <img id="highlighted-offer-image" src="" alt="عرض مميز" loading="lazy" width="400" height="300">
@@ -301,24 +301,24 @@
 
     <!-- Benefits Section -->
     <section class="benefits">
-        <h2 class="section-title">لماذا تختارنا؟</h2>
+        <h2 class="section-title scroll-slide-left">لماذا تختارنا؟</h2>
         <div class="benefits-grid">
-            <div class="benefit-card">
+            <div class="benefit-card scroll-slide-left delay-1">
                 <i class="fas fa-clock"></i>
                 <h3>الدقة بالمواعيد</h3>
                 <p>نلتزم بالوقت المحدد لجميع خدماتنا</p>
             </div>
-            <div class="benefit-card">
+            <div class="benefit-card scroll-slide-right delay-2">
                 <i class="fas fa-headset"></i>
                 <h3>خدمة عملاء مميزة</h3>
                 <p>فريق خدمة عملاء متاح 24/7 لمساعدتك</p>
             </div>
-            <div class="benefit-card">
+            <div class="benefit-card scroll-slide-left delay-3">
                 <i class="fas fa-lock"></i>
                 <h3>الدفع بأمان</h3>
                 <p>أنظمة دفع آمنة ومشفرة</p>
             </div>
-            <div class="benefit-card">
+            <div class="benefit-card scroll-slide-right delay-4">
                 <i class="fas fa-star"></i>
                 <h3>جودة عالية</h3>
                 <p>نقدم أفضل الخدمات بمعايير الجودة العالية</p>
@@ -338,7 +338,8 @@
     <!-- Testimonials Section -->
     <section id="testimonials">
         <div>
-            <h2 class="section-title">رأي <span style="color: var(--accent-color);">عملائنا</span></h2>
+            <h2 class="section-title scroll-slide-left">رأي <span style="color: var(--accent-color);">عملائنا</span>
+            </h2>
         </div>
 
 
@@ -348,7 +349,7 @@
         </div>
 
 
-        <div class="user_insert_comment_form_div">
+        <div class="user_insert_comment_form_div scroll-slide-right">
             <h3 class="section-title">شاركنا تجربتك</h3>
             <form id="user_comment_form">
                 <label for="user_comment_username">الإسم:</label>
@@ -464,11 +465,11 @@
     <!-- Add this before the closing body tag -->
     <footer>
         <div class="footer-container">
-            <div class="footer-section">
+            <div class="footer-section scroll-slide-left delay-1">
                 <h3>عن الشركة</h3>
                 <p style="cursor: text;">نقدم أفضل العروض السياحية بأسعار تنافسية وجودة عالية</p>
             </div>
-            <div class="footer-section">
+            <div class="footer-section scroll-slide-right delay-2">
                 <h3>روابط سريعة</h3>
                 <ul>
                     <li><a
@@ -480,7 +481,7 @@
                     <li><a href="https://wa.me/966569446280" target="_blank">اتصل بنا</a></li>
                 </ul>
             </div>
-            <div class="footer-section">
+            <div class="footer-section scroll-slide-left delay-3">
                 <h3>اتصل بنا</h3>
                 <ul>
                     <li style="direction: ltr;">+966 569446280 <i class="fas fa-phone"></i></li>
@@ -488,7 +489,7 @@
                     <li><i class="fas fa-map-marker-alt"></i> شركة اونلاين للسفر والسياحة</li>
                 </ul>
             </div>
-            <div class="footer-section">
+            <div class="footer-section scroll-slide-right delay-4">
                 <h3>تابعنا</h3>
                 <div class="social-icons">
                     <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
