--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                     <span>عرض مميز</span>
                 </div>
                 <h2 class="highlighted-offer-title  animate-on-scroll from-left" id="highlighted-offer-title"></h2>
-                <p class="highlighted-offer-description  animate-on-scroll from-bottom" id="highlighted-offer-description">
+                <p class="highlighted-offer-description  animate-on-scroll from-bottom"
+                    id="highlighted-offer-description">
                 </p>
                 <div class="highlighted-offer-pricing-dates animate-on-scroll from-left">
                     <span class="highlighted-offer-price" id="highlighted-offer-price"></span>
@@ -253,7 +254,8 @@
             <!-- Overlay with content -->
             <div class="service-goals-overlay">
                 <div class="service-goals-content">
-                    <h2 class="animate-on-scroll from-right">هدفنا هو تحقيق رحلة أحلامك بطريقة ابداعية تميزنا عن غيرنا</h2>
+                    <h2 class="animate-on-scroll from-right">هدفنا هو تحقيق رحلة أحلامك بطريقة ابداعية تميزنا عن غيرنا
+                    </h2>
                 </div>
             </div>
         </div>
@@ -338,7 +340,8 @@
     <!-- Testimonials Section -->
     <section id="testimonials">
         <div>
-            <h2 class="section-title animate-on-scroll from-bottom">رأي <span style="color: rgb(255, 61, 61);">عملائنا</span></h2>
+            <h2 class="section-title animate-on-scroll from-bottom">رأي <span
+                    style="color: rgb(255, 61, 61);">عملائنا</span></h2>
         </div>
 
 
@@ -466,7 +469,8 @@
         <div class="footer-container">
             <div class="footer-section">
                 <h3 class="animate-on-scroll from-right">عن الشركة</h3>
-                <p class="animate-on-scroll from-bottom" style="cursor: text;">نقدم أفضل العروض السياحية بأسعار تنافسية وجودة عالية</p>
+                <p class="animate-on-scroll from-bottom" style="cursor: text;">نقدم أفضل العروض السياحية بأسعار تنافسية
+                    وجودة عالية</p>
             </div>
             <div class="footer-section">
                 <h3 class="animate-on-scroll from-right">روابط سريعة</h3>
@@ -491,15 +495,31 @@
             <div class="footer-section">
                 <h3 class="animate-on-scroll from-right">تابعنا</h3>
                 <div class="social-icons">
-                    <a class="animate-on-scroll from-bottom" href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a class="animate-on-scroll from-bottom" href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a class="animate-on-scroll from-bottom" href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a class="animate-on-scroll from-bottom" href="#" aria-label="Snapchat"><i class="fab fa-snapchat-ghost"></i></a>
+                    <a class="animate-on-scroll from-bottom" href="#" aria-label="Facebook"><i
+                            class="fab fa-facebook-f"></i></a>
+                    <a class="animate-on-scroll from-bottom" href="#" aria-label="Twitter"><i
+                            class="fab fa-twitter"></i></a>
+                    <a class="animate-on-scroll from-bottom" href="#" aria-label="Instagram"><i
+                            class="fab fa-instagram"></i></a>
+                    <a class="animate-on-scroll from-bottom" href="#" aria-label="Snapchat"><i
+                            class="fab fa-snapchat-ghost"></i></a>
+                </div>
+                <div class="trusted-site-label">
+                    <i class="fas fa-check-circle"></i>
+                    <span>موقع موثوق</span>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
             <p>ابو طارق - جميع الحقوق محفوظة 2025 &copy;</p>
+            <div class="payment-methods">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Mastercard-logo.png" alt="Mastercard"
+                    style="width: clamp(3rem, 2vw, 28px)" title="Mastercard" loading="lazy">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Visa_Logo.png" alt="VISA" title="VISA"
+                    style="width: clamp(3rem, 2vw, 28px)" loading="lazy">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/b/b5/PayPal.svg" alt="PayPal" title="PayPal"
+                    style="width: clamp(4rem, 2vw, 28px)" loading="lazy">
+            </div>
         </div>
     </footer>
 
