--- a/index.html
+++ b/index.html
@@ -504,14 +504,14 @@
                     <a class="animate-on-scroll from-bottom" href="#" aria-label="Snapchat"><i
                             class="fab fa-snapchat-ghost"></i></a>
                 </div>
-                <div class="trusted-site-label">
+                <div class="trusted-site-label animate-on-scroll from-bottom">
                     <i class="fas fa-check-circle"></i>
                     <span>موقع موثوق</span>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>ابو طارق - جميع الحقوق محفوظة 2025 &copy;</p>
+            <p style="padding: 10px 0;">ابو طارق - جميع الحقوق محفوظة 2025 &copy;</p>
             <div class="payment-methods">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Mastercard-logo.png" alt="Mastercard"
                     style="width: clamp(3rem, 2vw, 28px)" title="Mastercard" loading="lazy">
