--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
             <h1 class="intro-headline">العالم أجمل من ماتتخيل</h1>
             <p class="intro-subhead">إكتشف الأماكن الجديدة واصنع ذكريات لاتنسى</p>
             <p class="intro-cta">أكثر من 200 رحلة سياحية في إنتظارك</p>
+
+            <button id="scroll-note-btn" class="scroll-note-btn">ملاحظة</button>
+            <div id="scroll-note-box" class="scroll-note-box">يجب علينا التحقق من توافر العرض المطلوب اولاً، وبعدها نقدر
+                نأكد الحجز</div>
+
         </div>
 
         <!-- New Scroll Hint -->
@@ -494,6 +499,7 @@
 
 
 
+
     <!-- Add this before the closing body tag -->
     <footer>
         <div class="footer-container">
@@ -569,6 +575,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/ar.js"></script>
+
+
+
+
+
+
 
 
 
