--- a/dashboard.html
+++ b/dashboard.html
@@ -74,14 +74,12 @@
                 <div class="form-row">
                     <div class="form-group half-width">
                         <label for="highlight-price">السعر:</label>
-                        <div style="display: flex; gap: 0.5rem;">
-                            <input type="number" id="highlight-price" placeholder="السعر الحالي" style="flex:2;">
-                            <select id="highlight-currency" style="flex:1;">
-                                <option value="SAR">ريال (SAR)</option>
-                                <option value="BHD">دينار بحريني (BHD)</option>
-                                <option value="USD">دولار (USD)</option>
-                            </select>
-                        </div>
+                        <input type="number" id="highlight-price" placeholder="السعر الحالي">
+                        <select id="highlight-currency" style="background: white; margin-top: 0.5rem; width: 100%;">
+                            <option value="SAR">ريال (SAR)</option>
+                            <option value="BHD">دينار بحريني (BHD)</option>
+                            <option value="USD">دولار (USD)</option>
+                        </select>
                     </div>
                     <div class="form-group half-width">
                         <label for="highlight-old-price">السعر القديم:</label>
@@ -177,7 +175,7 @@
                     <div class="form-group half-width">
                         <label for="offer-price">السعر:</label>
                         <input type="number" id="offer-price" placeholder="السعر الحالي">
-                        <select id="offer-currency" style="margin-top: 0.5rem; width: 100%;">
+                        <select id="offer-currency" style="background: white; margin-top: 0.5rem; width: 100%;">
                             <option value="SAR">ريال (SAR)</option>
                             <option value="BHD">دينار بحريني (BHD)</option>
                             <option value="USD">دولار (USD)</option>
