--- a/index.html
+++ b/index.html
@@ -600,6 +600,47 @@
 
     <script src="create-custom-offer.js"></script>
     <script src="script.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- Password Modal -->
+    <div id="password-modal"
+        style="position:fixed;z-index:9999;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.7);display:flex;align-items:center;justify-content:center;direction:rtl;">
+        <div
+            style="background:#fff;padding:2rem 2.5rem;border-radius:1rem;box-shadow:0 2px 16px rgba(0,0,0,0.2);min-width:300px;text-align:center;">
+            <h2 style="margin-bottom:1rem;">ادخل كلمة المرور</h2>
+            <input id="password-input" type="text" placeholder="كلمة المرور"
+                style="width:100%;padding:0.5rem 1rem;font-size:1.1rem;margin-bottom:1rem;border-radius:0.5rem;border:1px solid #ccc;outline:none;">
+            <div id="password-error" style="color:red;display:none;margin-bottom:0.5rem;">كلمة المرور غير صحيحة</div>
+            <button id="password-submit"
+                style="background:#007bff;color:#fff;padding:0.5rem 2rem;border:none;border-radius:0.5rem;font-size:1.1rem;cursor:pointer;">دخول</button>
+        </div>
+    </div>
+    <!-- End Password Modal -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 
 </html>
