--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
     <!-- Password Modal -->
     <div id="password-modal"
         style="position:fixed;z-index:9999;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.9);display:flex;align-items:center;justify-content:center;direction:rtl;">
-        <div
+        <div class="modal-box"
             style="background:#fff;padding:2rem 2.5rem;border-radius:1rem;box-shadow:0 2px 16px rgba(0,0,0,0.2);min-width:300px;text-align:center;">
             <h2 style="margin-bottom:1rem;">ادخل كلمة المرور</h2>
             <input id="password-input" type="text" placeholder="كلمة المرور"
@@ -625,6 +625,7 @@
             <button id="password-submit"
                 style="background:#007bff;color:#fff;padding:0.5rem 2rem;border:none;border-radius:0.5rem;font-size:1.1rem;cursor:pointer;">دخول</button>
         </div>
+        <div id="welcome-animation"></div>
     </div>
     <!-- End Password Modal -->
 
