--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ابو طارق</title>
+    <title>بندر</title>
     <link rel="stylesheet" href="create-custom-offer.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -19,7 +19,9 @@
     <header>
         <div class="logo-container">
             <img src="" alt="شعار الشركة" class="logo-img">
-            <div class="logo-text">ابو طارق</div>
+            <div class="logo-text">
+                <title>بندر</title>
+            </div>
         </div>
         <div class="header-icons">
             <i class="fas fa-heart" id="favorites-icon"><span class="favorites-count">0</span></i>
@@ -547,7 +549,10 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p style="padding: 10px 0;">ابو طارق - جميع الحقوق محفوظة 2025 &copy;</p>
+            <p style="padding: 10px 0;">
+                <title>بندر</title>
+                - جميع الحقوق محفوظة 2025 &copy;
+            </p>
             <div class="payment-methods">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Mastercard-logo.png" alt="Mastercard"
                     style="width: clamp(3rem, 2vw, 28px)" title="Mastercard" loading="lazy">
